Changed logo size

--- a/templates/team.html
+++ b/templates/team.html
@@ -13,7 +13,7 @@
 <!-- Navigation Bar -->
 <nav class="bg-white p-4 shadow-md flex justify-between items-center">
   <a href="{{ url_for('index') }}" class="text-xl font-bold text-blue-700 hover:text-rose-500 transition flex items-center gap-2">
-    <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-6 h-6">
+    <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-8 h-8 -mt-1">
     DogArmor
   </a>
   <div class="space-x-4 text-sm text-gray-700 font-medium">
