--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
   <nav class="bg-white p-4 flex justify-between items-center shadow-lg border-b border-gray-300">
     <!-- Logo -->
     <a href="{{ url_for('index') }}" class="flex items-center gap-2 text-blue-600 font-bold text-xl">
-      <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-6 h-6 object-contain">
+      <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-8 h-8 -mt-1 object-contain">
       DogArmor
     </a>
   
