--- a/templates/how-it-works.html
+++ b/templates/how-it-works.html
@@ -13,7 +13,7 @@
   <!-- Navbar -->
   <nav class="bg-white p-4 shadow-md flex justify-between items-center">
     <a href="{{ url_for('index') }}" class="flex items-center gap-2 text-blue-700 font-bold text-xl">
-      <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-6 h-6 object-contain">
+      <img src="{{ url_for('static', filename='dog-armor.png') }}" alt="DogArmor Icon" class="w-8 h-8 -mt-1 object-contain">
       DogArmor
     </a>
     <div class="space-x-4 text-sm">
