--- a/static/style.css
+++ b/static/style.css
@@ -235,3 +235,14 @@ p {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
 }
+
+
+.team-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: default;
+}
+.team-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 15px 30px rgba(251, 146, 60, 0.3); /* warm orange glow */
+  cursor: pointer;
+}
